--- a/src/blocks/input/input.css
+++ b/src/blocks/input/input.css
@@ -1,5 +1,6 @@
 .input {
-  padding-bottom: 48px;
+  padding: 0;
+  /*padding-bottom: 48px;*/
   align-self: center;
   width: 358px;
   border: none;
