--- a/src/blocks/edit/__title/__title.css
+++ b/src/blocks/edit/__title/__title.css
@@ -1,5 +1,5 @@
 .edit__title {
-  padding: 34px 64px 54px 36px;
+  padding: 34px 36px 0;
   font-size: 1.5rem;
   font-weight: 900;
   line-height: 1.8rem;
