--- a/src/blocks/input/__field/__field.css
+++ b/src/blocks/input/__field/__field.css
@@ -3,3 +3,11 @@
   display: flex;
   flex-direction: column;
 }
+
+.input__field:nth-child(1) {
+  margin-top: 54px;
+}
+
+.input__field:last-child{
+  margin-bottom: 10px;
+}
